<resources>
    <string name="app_name">BukaEkspor</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="copyright">Copyright MasMas @2017</string>

    <string name="backdrop_title">@string/app_name</string>
    <string name="backdrop_subtitle">Kebutuhan Ekspor Indonesia</string>

    <string name="action_add_favourite">Add Favorite</string>
    <string name="action_play_next">Play Next</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_transaction">TransaksiKu</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="logout">Keluar</string>
</resources>
